# jsonantt

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: package-extension.yml  publish.yml  verify-example-assets.yml
docs/: cli.rst  conf.py  examples.rst  index.rst  json-reference.rst  make_examples.py  make_logo.py  quickstart.rst  style-guide.rst
docs/examples/: durations.json  milestones.json  quickstart.json
examples/: chained-milestones.json  colors.json  compare-actual.json  compare-planned.json  compare-table.csv  complex.json  composed-delivery.json  composed-discovery.json  composed-plan.json  costs-overlap-burn-table.csv  costs-overlap-table.csv  costs-overlap.json  costs-table.csv  costs.json  dependencies.json  description-wrap-table.csv  description-wrap.json  funding-burn-table.csv  funding.json  major-milestones.json  renderdepth-table.csv  renderdepth.json  simple.json
jsonantt/: __init__.py  cli.py  models.py  parser.py  renderer.py
tests/: test_parser.py  test_renderer.py
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  previewPanel.ts  renderer.ts
vscode-extension/src/webview/: panel.css  panel.js
