[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonantt"
version = "2026.26"
description = "Generate Gantt charts from JSON descriptions using matplotlib"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gantt", "chart", "matplotlib", "project-management", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://jsonantt.readthedocs.io/en/latest/"
Documentation = "https://jsonantt.readthedocs.io/en/latest/"
Repository = "https://github.com/briday1/jsonantt"
Issues = "https://github.com/briday1/jsonantt/issues"

[project.scripts]
jsonantt = "jsonantt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jsonantt*"]
